Fix broken/off-center images for iOS.

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,8 @@ header {
   position: absolute;
   width: 100%;
   z-index: -1;
+  left: 0;
+  top: 0;
 }
 
 .img_top {
